--- a/public/.gitignore
+++ b/public/.gitignore
@@ -1,11 +1,11 @@
-*
-!css
-!js
-!.htaccess
-!favicon.ico
-!index.php
-!mix-manifest.json
-!robots.txt
-!web.config
-!storage
-!.gitignore
+!*/
+!css/*
+!js/*
+!.htaccess/*
+!favicon.ico/*
+!index.php/*
+!mix-manifest.json/*
+!robots.txt/*
+!web.config/*
+!storage/*
+!.gitignore/*
