--- a/.env
+++ b/.env
@@ -44,3 +44,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+JAWSDB_URL='mysql://cnnen6z1jca1dgq3:tjzj1uayh0tk1bxw@nnmeqdrilkem9ked.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/e3u76mzcnon6a5qx'
