--- a/.env
+++ b/.env
@@ -32,10 +32,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=tsunagate@outlook.jp
 MAIL_FROM_NAME=example
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=AKIARV7J6IRV7SSMWGEA
+AWS_SECRET_ACCESS_KEY=qLCmS6XWywVls4kPqtzvrePLt4I5xw8k092VIo5I
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_BUCKET=sukettoimages
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
