--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ AWS_ACCESS_KEY_ID=AKIARV7J6IRV7SSMWGEA
 AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=ap-northeast-1
 AWS_BUCKET=sukettoimages
+AWS_URL=https://sukettoimages.s3-ap-northeast-1.amazonaws.com
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
