--- a/.env
+++ b/.env
@@ -32,6 +32,12 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=tsunagate@outlook.jp
 MAIL_FROM_NAME=example
 
+
+#sendgrid 
+SENDGRID_API_KEY=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
+FROM_EMAIL=tsunagate@outlook.jp
+FROM_NAME="CIRCLE APP"
+
 AWS_ACCESS_KEY_ID=AKIARV7J6IRV7SSMWGEA
 AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=ap-northeast-1
