--- a/.env
+++ b/.env
@@ -24,17 +24,17 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=04b43d9b7263c5
-MAIL_PASSWORD=eb179e831a8555
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=25
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=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
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=tsunagate@outlook.jp
-MAIL_FROM_NAME=example
+MAIL_FROM_NAME='CIRCLE APP'
 
 
 #sendgrid 
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 FROM_EMAIL=tsunagate@outlook.jp
 FROM_NAME="CIRCLE APP"
 
