--- a/.env.testing
+++ b/.env.testing
@@ -3,6 +3,7 @@ APP_ENV=testing
 APP_KEY=base64:L8nJEmus5q/FVd30lzbD/zvDkIcgWNE9ETwgiNMiflU=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_FAKER_LOCALE=ja_JP
 
 LOG_CHANNEL=stack
 
