--- a/.env.testing
+++ b/.env.testing
@@ -1,9 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=testing
-APP_KEY=base64:L8nJEmus5q/FVd30lzbD/zvDkIcgWNE9ETwgiNMiflU=
+APP_KEY=base64:0H6EmAyRSKYS3U6um9QRNkOQf8Jxw6o9HZsLC9mbTKo=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_FAKER_LOCALE=ja_JP
 
 LOG_CHANNEL=stack
 
@@ -25,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=25
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=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
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=tsunagate@outlook.jp
+MAIL_FROM_NAME='CIRCLE APP'
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
